--- a/index.html
+++ b/index.html
@@ -48,19 +48,68 @@
             <div></div>
             <div></div>
         </div>
-        <div id="left-arrow"><div class="center"><button><img src="img/gallery-arrow.svg" alt=""></button></div></div>
-        <div id="right-arrow"><div class="center"><button><img src="img/gallery-arrow.svg" alt=""></button></div></div>
+        <div id="left-arrow">
+            <div class="center"><button><img src="img/gallery-arrow.svg" alt=""></button></div>
+        </div>
+        <div id="right-arrow">
+            <div class="center"><button><img src="img/gallery-arrow.svg" alt=""></button></div>
+        </div>
         <h1>Lorem ipsum dolor sit amet</h1>
     </section>
     <section id="estudio">
+
+        <div id="first-line"></div>
+
         <div id="anchor-estudio" class="anchor"></div>
         <div class="estudio-container">
             <h3>Lorem ipsum dolor sit amet</h3>
             <h4>Lorem ipsum dolor sit amet</h4>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea com modo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros.</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+                laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
+                ullamcorper suscipit lobortis nisl ut aliquip ex ea com modo consequat. Duis autem vel eum iriure dolor
+                in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at
+                vero eros.</p>
         </div>
         <img src="img/CM_IMG1.png" alt="planos">
     </section>
+
+    <section id="servicios">
+
+        <div class="servicios-container">
+            <img src="img/ReformasIcon-15.svg" alt="Reformas">
+            <h3>REFORMAS</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in tempore excepturi
+                beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit? Obcaecati id
+                mollitia tenetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in
+                tempore excepturi beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit?
+                Obcaecati id mollitia tenetur?</p>
+        </div>
+
+        <div class="servicios-container">
+            <img src="img/ReformasIcon-15.svg" alt="Reformas">
+            <h3>REFORMAS</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in tempore excepturi
+                beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit? Obcaecati id
+                mollitia tenetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in
+                tempore excepturi beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit?
+                Obcaecati id mollitia tenetur?</p>
+        </div>
+
+        <div class="servicios-container">
+            <img src="img/ReformasIcon-15.svg" alt="Reformas">
+            <h3>REFORMAS</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in tempore excepturi
+                beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit? Obcaecati id
+                mollitia tenetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in
+                tempore excepturi beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit?
+                Obcaecati id mollitia tenetur?</p>
+        </div>
+
+
+    </section>
+
+
+
 
 </body>
 
