--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
         <div id="nav-menu">
             <div><a href="#anchor-estudio">estudio</a></div>
-            <div><a href="#">servicios</a></div>
-            <div><a href="#">proyectos</a></div>
+            <div><a href="#anchor-servicios">servicios</a></div>
+            <div><a href="#anchor-proyectos">proyectos</a></div>
             <div><a href="#">contacto</a></div>
         </div>
     </nav>
@@ -56,6 +56,8 @@
         </div>
         <h1>Lorem ipsum dolor sit amet</h1>
     </section>
+
+
     <section id="estudio">
 
         <div id="first-line"></div>
@@ -75,15 +77,8 @@
 
     <section id="servicios">
 
-        <div class="servicios-container">
-            <img src="img/ReformasIcon-15.svg" alt="Reformas">
-            <h3>REFORMAS</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in tempore excepturi
-                beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit? Obcaecati id
-                mollitia tenetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in
-                tempore excepturi beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit?
-                Obcaecati id mollitia tenetur?</p>
-        </div>
+        <div id="anchor-servicios" class="anchor"></div>
+        <div id="second-line"></div>
 
         <div class="servicios-container">
             <img src="img/ReformasIcon-15.svg" alt="Reformas">
@@ -96,7 +91,7 @@
         </div>
 
         <div class="servicios-container">
-            <img src="img/ReformasIcon-15.svg" alt="Reformas">
+            <img src="img/AmpliacionesIcon.svg" alt="Ampliaciones">
             <h3>REFORMAS</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in tempore excepturi
                 beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit? Obcaecati id
@@ -105,9 +100,115 @@
                 Obcaecati id mollitia tenetur?</p>
         </div>
 
+        <div class="servicios-container">
+            <img src="img/DiseñoIcon.svg" alt="Diseño">
+            <h3>REFORMAS</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in tempore excepturi
+                beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit? Obcaecati id
+                mollitia tenetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in
+                tempore excepturi beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit?
+                Obcaecati id mollitia tenetur?</p>
+        </div>
 
     </section>
 
+    <section id="proyectos">
+
+        <div id="anchor-proyectos" class="anchor"></div>
+
+        <div id="p-title">
+            <h3>Lorem ipsum dolor sit amet</h3>
+        </div>
+        <div id="p-container">
+
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Casa</h4>
+                        <p>Lomas de San Antonio</p>
+                    </div>
+                    <div class="link">
+                        <a href="">
+                            <p>Ver más</p>
+                        </a>
+                    </div>
+                </div>
+                <img src="img/thumbnail.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Casa</h4>
+                        <p>Lomas de San Antonio</p>
+                    </div>
+                    <div class="link">
+                        <a href="">
+                            <p>Ver más</p>
+                        </a>
+                    </div>
+                </div>
+                <img src="img/thumbnail.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Casa</h4>
+                        <p>Lomas de San Antonio</p>
+                    </div>
+                    <div class="link">
+                        <a href="">
+                            <p>Ver más</p>
+                        </a>
+                    </div>
+                </div>
+                <img src="img/thumbnail.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Casa</h4>
+                        <p>Lomas de San Antonio</p>
+                    </div>
+                    <div class="link">
+                        <a href="">
+                            <p>Ver más</p>
+                        </a>
+                    </div>
+                </div>
+                <img src="img/thumbnail.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Casa</h4>
+                        <p>Lomas de San Antonio</p>
+                    </div>
+                    <div class="link">
+                        <a href="">
+                            <p>Ver más</p>
+                        </a>
+                    </div>
+                </div>
+                <img src="img/thumbnail.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Casa</h4>
+                        <p>Lomas de San Antonio</p>
+                    </div>
+                    <div class="link">
+                        <a href="">
+                            <p>Ver más</p>
+                        </a>
+                    </div>
+                </div>
+                <img src="img/thumbnail.jpg" alt="">
+            </div>
+
+        </div>
+
+    </section>
 
 
 
