--- a/index.html
+++ b/index.html
@@ -90,38 +90,47 @@
         <div id="anchor-servicios" class="anchor"></div>
         <div id="second-line" class="line-off"></div>
 
-        <div id="servicios-title">
+        <div class="section-title">
             <h3>- Nuestros servicios -</h3>
         </div>
 
         <div class="servicios-container">
-            <img src="img/ReformasIcon-15.svg" alt="Reformas">
-            <h3>REFORMAS</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in tempore excepturi
-                beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit? Obcaecati id
-                mollitia tenetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in
-                tempore excepturi beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit?
-                Obcaecati id mollitia tenetur?</p>
+            <h3>proyecto y dirección de obra</h3>
+            <p>Participamos activamente durante todo el proceso de construcción del proyecto, enfocados en los aspectos
+                técnicos y estéticos. Mediante una metodología de trabajo respaldada en la recolección de información,
+                analizamos desde distintos puntos de vista cada situación en pos de garantizar las mejores soluciones.
+                La planificación ordenada y la optimización máxima de los recursos, nos posicionan en un lugar de plena
+                confiabilidad para los clientes, permitiéndonos concretar cada desarrollo en tiempo y forma.
+            </p>
         </div>
 
         <div class="servicios-container">
-            <img src="img/AmpliacionesIcon.svg" alt="Ampliaciones">
-            <h3>REFORMAS</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in tempore excepturi
-                beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit? Obcaecati id
-                mollitia tenetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in
-                tempore excepturi beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit?
-                Obcaecati id mollitia tenetur?</p>
+            <h3>GERENCIAMIENTO Y CONSTRUCCIÓN</h3>
+            <p>Los avances tecnológicos y un contexto actual muy cambiante, nos llevan a adaptarnos a nuevas exigencias
+                de forma permanente. Por esa razón, maximizamos nuestros recursos para encontrar alternativas que
+                cumplan, o mejor aún, superen las expectativas creadas por los clientes.
+                En la elaboración del plan de obra organizamos a todos los gremios intervinientes, para poder coordinar
+                los tiempos y así alcanzar los fines deseados de manera eficiente.</p>
         </div>
 
         <div class="servicios-container">
-            <img src="img/DiseñoIcon.svg" alt="Diseño">
-            <h3>REFORMAS</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in tempore excepturi
-                beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit? Obcaecati id
-                mollitia tenetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error saepe hic placeat, in
-                tempore excepturi beatae ipsam eligendi inventore sequi soluta reiciendis nostrum dicta, aperiam sit?
-                Obcaecati id mollitia tenetur?</p>
+            <h3>VIVIENDAS UNIFAMILIARES Y MULTIFAMILIARES</h3>
+            <p>A partir de las necesidades del cliente, proyectamos un concepto de vivienda utilizando el lenguaje que
+                mejor se adapte a la idea de partido. Nuestra búsqueda de un equilibrio funcional, se ve reflejada en
+                cada espacio que invita a experimentar sensaciones de confort y permite apreciar una estética única.
+                Para cada proyecto, realizamos un estudio de asoleamiento enfocado en la zona de la vivienda y su
+                relación climática con las distintas estaciones del año.
+                Siempre estamos dispuestos a garantizar un seguimiento de todos los procesos hasta la entrega final del
+                proyecto, cumpliendo con el plazo acordado y obteniendo un producto de calidad.</p>
+        </div>
+
+        <div class="servicios-container">
+            <h3>ARQUITECTURA COMERCIAL</h3>
+            <p>Pensamos y entendemos el diseño de oficinas de trabajo como la manera de lograr que nuestros clientes
+                vivan la mejor experiencia. Disfrutar de espacio atractivo, cómodo y funcional será lo que les
+                permitirá alcanzar una mayor productividad y rendimiento en el día a día.
+                La calidad de un diseño innovador que se ajuste a cada situación en particular, es nuestro principal
+                desafío al momento de brindar más beneficios para nuestros clientes.</p>
         </div>
 
     </section>
@@ -130,9 +139,10 @@
 
         <div id="anchor-proyectos" class="anchor"></div>
 
-        <div id="p-title">
-            <h3>Lorem ipsum dolor sit amet</h3>
+        <div class="section-title">
+            <h3>- Proyectos -</h3>
         </div>
+
         <div id="p-container">
 
             <div id="third-line" class="line-off"></div>
@@ -144,24 +154,9 @@
                         <p>Lomas de San Antonio</p>
                     </div>
                     <div class="link">
-                        <a href="">
-                            <p>Ver más</p>
-                        </a>
-                    </div>
-                </div>
-                <img src="img/thumbnail.jpg" alt="">
-            </div>
-
-            <div class="thumbnail">
-                <div class="p-description">
-                    <div class="data">
-                        <h4>Casa</h4>
-                        <p>Lomas de San Antonio</p>
-                    </div>
-                    <div class="link">
-                        <a href="">
-                            <p>Ver más</p>
-                        </a>
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
                     </div>
                 </div>
                 <img src="img/thumbnail.jpg" alt="">
@@ -173,9 +168,9 @@
                         <p>Lomas de San Antonio</p>
                     </div>
                     <div class="link">
-                        <a href="">
-                            <p>Ver más</p>
-                        </a>
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
                     </div>
                 </div>
                 <img src="img/thumbnail.jpg" alt="">
@@ -187,9 +182,9 @@
                         <p>Lomas de San Antonio</p>
                     </div>
                     <div class="link">
-                        <a href="">
-                            <p>Ver más</p>
-                        </a>
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
                     </div>
                 </div>
                 <img src="img/thumbnail.jpg" alt="">
@@ -201,14 +196,13 @@
                         <p>Lomas de San Antonio</p>
                     </div>
                     <div class="link">
-                        <a href="">
-                            <p>Ver más</p>
-                        </a>
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
                     </div>
                 </div>
                 <img src="img/thumbnail.jpg" alt="">
             </div>
-
             <div class="thumbnail">
                 <div class="p-description">
                     <div class="data">
@@ -216,9 +210,51 @@
                         <p>Lomas de San Antonio</p>
                     </div>
                     <div class="link">
-                        <a href="">
-                            <p>Ver más</p>
-                        </a>
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+                <img src="img/thumbnail.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Casa</h4>
+                        <p>Lomas de San Antonio</p>
+                    </div>
+                    <div class="link">
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+                <img src="img/thumbnail.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Casa</h4>
+                        <p>Lomas de San Antonio</p>
+                    </div>
+                    <div class="link">
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+                <img src="img/thumbnail.jpg" alt="">
+            </div>
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Casa</h4>
+                        <p>Lomas de San Antonio</p>
+                    </div>
+                    <div class="link">
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
                     </div>
                 </div>
                 <img src="img/thumbnail.jpg" alt="">
