--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body onresize="onResizeAction()" onscroll="onScrollAction()">
 
     <section id="menu-desplegable" class="menu-off">
-        <div><a href="">Estudio</a></div>
-        <div><a href="">Servicios</a></div>
-        <div><a href="">Proyectos</a></div>
-        <div><a href="">Contacto</a></div>
+        <div><a class="burger-link" href="#anchor-estudio">Estudio</a></div>
+        <div><a class="burger-link" href="#anchor-servicios">Servicios</a></div>
+        <div><a class="burger-link" href="#anchor-proyectos">Proyectos</a></div>
+        <div><a class="burger-link" href="#anchor-contacto">Contacto</a></div>
     </section>
 
     <nav>
@@ -29,10 +29,10 @@
         </div>
 
         <div id="nav-menu">
-            <div><a href="#anchor-estudio">estudio</a></div>
-            <div><a href="#anchor-servicios">servicios</a></div>
-            <div><a href="#anchor-proyectos">proyectos</a></div>
-            <div><a href="#anchor-contacto">contacto</a></div>
+            <div><a id="btn-estudio" href="#anchor-estudio">estudio</a></div>
+            <div><a id="btn-servicios" href="#anchor-servicios">servicios</a></div>
+            <div><a id="btn-proyectos" href="#anchor-proyectos">proyectos</a></div>
+            <div><a id="btn-contacto" href="#anchor-contacto">contacto</a></div>
         </div>
 
     </nav>
@@ -69,6 +69,8 @@
         <div id="first-line" class="line-off"></div>
 
         <div id="anchor-estudio" class="anchor"></div>
+        <div id="mark-estudio" class="mark"></div>
+        
         <div class="estudio-container">
             <h3>Equilibrio expresivo y funcional</h3>
             <h4>En una búsqueda sin límites</h4>
@@ -88,6 +90,7 @@
     <section id="servicios">
 
         <div id="anchor-servicios" class="anchor"></div>
+        <div id="mark-servicios" class="mark"></div>
         <div id="second-line" class="line-off"></div>
 
         <div class="section-title">
@@ -138,6 +141,7 @@
     <section id="proyectos">
 
         <div id="anchor-proyectos" class="anchor"></div>
+        <div id="mark-proyectos" class="mark"></div>
 
         <div class="section-title">
             <h3>- Proyectos -</h3>
@@ -150,8 +154,8 @@
             <div class="thumbnail">
                 <div class="p-description">
                     <div class="data">
-                        <h4>Casa</h4>
-                        <p>Lomas de San Antonio</p>
+                        <h4>Vivienda multifamiliar - Deptos San Martín</h4>
+                        <p>Luján - Bs.As.</p>
                     </div>
                     <div class="link">
                         <div>
@@ -159,13 +163,14 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/thumbnail.jpg" alt="">
+                <img src="projects/p_000/thumbnail.png" alt="">
             </div>
+
             <div class="thumbnail">
                 <div class="p-description">
                     <div class="data">
-                        <h4>Casa</h4>
-                        <p>Lomas de San Antonio</p>
+                        <h4>Cervecería TROPEL</h4>
+                        <p>Lujan - Bs.As.</p>
                     </div>
                     <div class="link">
                         <div>
@@ -173,13 +178,14 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/thumbnail.jpg" alt="">
+                <img src="projects/p_001/thumbnail.png" alt="">
             </div>
+
             <div class="thumbnail">
                 <div class="p-description">
                     <div class="data">
-                        <h4>Casa</h4>
-                        <p>Lomas de San Antonio</p>
+                        <h4>Vivienda Unifamiliar - Camerano</h4>
+                        <p>Lujan - Bs.As.</p>
                     </div>
                     <div class="link">
                         <div>
@@ -187,13 +193,14 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/thumbnail.jpg" alt="">
+                <img src="projects/p_002/thumbnail.png" alt="">
             </div>
+
             <div class="thumbnail">
                 <div class="p-description">
                     <div class="data">
-                        <h4>Casa</h4>
-                        <p>Lomas de San Antonio</p>
+                        <h4>Vivienda multifamiliar - Battistotti</h4>
+                        <p>Luján - Bs.As.</p>
                     </div>
                     <div class="link">
                         <div>
@@ -201,13 +208,14 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/thumbnail.jpg" alt="">
+                <img src="projects/p_003/thumbnail.png" alt="">
             </div>
+
             <div class="thumbnail">
                 <div class="p-description">
                     <div class="data">
-                        <h4>Casa</h4>
-                        <p>Lomas de San Antonio</p>
+                        <h4>Escuela Medalla Milagrosa</h4>
+                        <p>Luján - Bs.As.</p>
                     </div>
                     <div class="link">
                         <div>
@@ -215,13 +223,14 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/thumbnail.jpg" alt="">
+                <img src="projects/p_003/thumbnail.png" alt="">
             </div>
+
             <div class="thumbnail">
                 <div class="p-description">
                     <div class="data">
-                        <h4>Casa</h4>
-                        <p>Lomas de San Antonio</p>
+                        <h4>Vivienda Multifamiliar - Arballo</h4>
+                        <p>Luján - Bs.As.</p>
                     </div>
                     <div class="link">
                         <div>
@@ -229,13 +238,14 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/thumbnail.jpg" alt="">
+                <img src="projects/p_005/thumbnail.png" alt="">
             </div>
+
             <div class="thumbnail">
                 <div class="p-description">
                     <div class="data">
-                        <h4>Casa</h4>
-                        <p>Lomas de San Antonio</p>
+                        <h4>Cervecería Baum Lujan</h4>
+                        <p>Luján - Bs.As.</p>
                     </div>
                     <div class="link">
                         <div>
@@ -243,13 +253,14 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/thumbnail.jpg" alt="">
+                <img src="projects/p_006/thumbnail.png" alt="">
             </div>
+
             <div class="thumbnail">
                 <div class="p-description">
                     <div class="data">
-                        <h4>Casa</h4>
-                        <p>Lomas de San Antonio</p>
+                        <h4>Vivienda Unifamiliar - Castiglia</h4>
+                        <p>Luján - Bs.As.</p>
                     </div>
                     <div class="link">
                         <div>
@@ -257,7 +268,67 @@
                         </div>
                     </div>
                 </div>
-                <img src="img/thumbnail.jpg" alt="">
+                <img src="projects/p_007/thumbnail.png" alt="">
+            </div>
+
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Vivienda Unifamiliar - Brando</h4>
+                        <p>Luján - Bs.As.</p>
+                    </div>
+                    <div class="link">
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+                <img src="projects/p_008/thumbnail.png" alt="">
+            </div>
+
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Vivienda Unifamiliar - Massola</h4>
+                        <p>Pehuajó - Bs.As.</p>
+                    </div>
+                    <div class="link">
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+                <img src="projects/p_009/thumbnail.png" alt="">
+            </div>
+
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Oficina Grupo Mas</h4>
+                        <p>Luján - Bs.As.</p>
+                    </div>
+                    <div class="link">
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+                <img src="projects/p_010/thumbnail.png" alt="">
+            </div>
+
+            <div class="thumbnail">
+                <div class="p-description">
+                    <div class="data">
+                        <h4>Vivienda Unifamiliar - Castro</h4>
+                        <p>Pehuajó - Bs.As.</p>
+                    </div>
+                    <div class="link">
+                        <div>
+                            <a href="">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+                <img src="projects/p_011/thumbnail.png" alt="">
             </div>
 
         </div>
@@ -270,6 +341,8 @@
 
     <section id="contacto">
         <div id="anchor-contacto" class="anchor"></div>
+        <div id="mark-contacto" class="mark"></div>
+
         <div id="info">
             <p>Contacto:</p>
             <ul>
