--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                     <div class="link">
                         <div>
-                            <a href="">Ver más</a>
+                            <a href="/proyecto00.html">Ver más</a>
                         </div>
                     </div>
                 </div>
