--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         <div id="anchor-contacto" class="anchor"></div>
         <div id="mark-contacto" class="mark"></div>
 
-        <!-- <img class="bkg" src="img/CM_IMG1.png" alt=""> -->
+        <img class="bkg" src="img/CM_IMG1.png" alt="">
 
         <div id="info">
             <p>Contacto:</p>
@@ -389,11 +389,8 @@
                 </li>
             </ul>
         </div>
-
-
+        
     </section>
-
-
 
     <footer>
         <div class="f-container">
@@ -413,9 +410,8 @@
         </div>
     </footer>
 
-
-
     <script src="js/scripts.js"></script>
+    <script src="js/scroll.js"></script>
 </body>
 
 </html>
