--- a/castiglia.html
+++ b/castiglia.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/projects-gallery.css">
 </head>
 
-<body onresize="onResizeAction()" onscroll="onScrollAction()">
+<body onresize="onResizeAction()" >
 
     <section id="menu-desplegable" class="menu-off">
         <div><a class="burger-link" href="/index.html#anchor-estudio">Estudio</a></div>
