--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/dts_san_martin.html">Ver más</a>
+                                <a href="dts_san_martin.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/tropel.html">Ver más</a>
+                                <a href="tropel.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/camerano.html">Ver más</a>
+                                <a href="camerano.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/battistotti.html">Ver más</a>
+                                <a href="battistotti.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -246,7 +246,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/escuela_medalla.html">Ver más</a>
+                                <a href="escuela_medalla.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -262,7 +262,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/arballo.html">Ver más</a>
+                                <a href="arballo.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -278,7 +278,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/baum.html">Ver más</a>
+                                <a href="baum.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -294,7 +294,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/castiglia.html">Ver más</a>
+                                <a href="castiglia.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/brando.html">Ver más</a>
+                                <a href="brando.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -326,7 +326,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/massola.html">Ver más</a>
+                                <a href="massola.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -342,7 +342,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/grupo_mas.html">Ver más</a>
+                                <a href="grupo_mas.html">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -358,7 +358,7 @@
                         </div>
                         <div class="link">
                             <div>
-                                <a href="/castro.html">Ver más</a>
+                                <a href="castro.html">Ver más</a>
                             </div>
                         </div>
                     </div>
