--- a/escuela_medalla.html
+++ b/escuela_medalla.html
@@ -14,15 +14,15 @@
 <body onresize="onResizeAction()" >
 
     <section id="menu-desplegable" class="menu-off">
-        <div><a class="burger-link" href="/index.html#anchor-estudio">Estudio</a></div>
-        <div><a class="burger-link" href="/index.html#anchor-servicios">Servicios</a></div>
-        <div><a class="burger-link" href="/index.html#anchor-proyectos">Proyectos</a></div>
-        <div><a class="burger-link" href="/index.html#anchor-contacto">Contacto</a></div>
+        <div><a class="burger-link" href="index.html#anchor-estudio">Estudio</a></div>
+        <div><a class="burger-link" href="index.html#anchor-servicios">Servicios</a></div>
+        <div><a class="burger-link" href="index.html#anchor-proyectos">Proyectos</a></div>
+        <div><a class="burger-link" href="index.html#anchor-contacto">Contacto</a></div>
     </section>
 
     <nav>
         <div id="logo" class="center">
-            <a href="/index.html" class="center"><img src="img/Logo-CM.png" alt="Logo Carballo-Marino"></a>
+            <a href="index.html" class="center"><img src="img/Logo-CM.png" alt="Logo Carballo-Marino"></a>
         </div>
 
         <div id="burger" class="center">
@@ -30,10 +30,10 @@
         </div>
 
         <div id="nav-menu">
-            <div><a id="btn-estudio" href="/index.html#anchor-estudio">estudio</a></div>
-            <div><a id="btn-servicios" href="/index.html#anchor-servicios">servicios</a></div>
-            <div><a id="btn-proyectos" href="/index.html#anchor-proyectos">proyectos</a></div>
-            <div><a id="btn-contacto" href="/index.html#anchor-contacto">contacto</a></div>
+            <div><a id="btn-estudio" href="index.html#anchor-estudio">estudio</a></div>
+            <div><a id="btn-servicios" href="index.html#anchor-servicios">servicios</a></div>
+            <div><a id="btn-proyectos" href="index.html#anchor-proyectos">proyectos</a></div>
+            <div><a id="btn-contacto" href="index.html#anchor-contacto">contacto</a></div>
         </div>
 
     </nav>
