--- a/massola.html
+++ b/massola.html
@@ -63,8 +63,8 @@
     </section>
 
     <section id="projects-gallery">
-        <div id="gal-button-left"><button onclick="minToLeft()"><img src="img/gallery-arrow.png" alt=""></button></div>
-        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.png" alt=""></button></div>
+        <div id="gal-button-left"><button onclick="minToLeft()"><img src="img/gallery-arrow.svg" alt=""></button></div>
+        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button></div>
 
         <div id="img-container">
             <div id="gallery-images">
