aplicados ultimos cambios

--- a/camerano.html
+++ b/camerano.html
@@ -164,7 +164,7 @@
                     <p>Teléfono oficina Luján: (11) 15/5957-0115</p>
                 </div>
                 <div class="f-dir2">
-                    <p>Hipólito Yrigoyen 897, Pehuajó, Buenos Aires.</p>
+                    <p>Mitre 1060, Pehuajó, Buenos Aires.</p>
                     <p class="f-div">&nbsp;-&nbsp</p>
                     <p>Teléfono oficina Pehuajó: (02396) 15 604-111</p>
                 </div>
