--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     clientes
                     vivan la mejor experiencia. Disfrutar de espacio atractivo, cómodo y funcional será lo que les
                     permitirá alcanzar mayor productividad y rendimiento en el día a día.
-                    <strong>La calidad de un diseño innovador que se ajuste a cada situación en particular, es nuestro
+                    <strong>La calidad de un diseño innovador que se ajuste a cada situación en particular es nuestro
                         principal
                         desafío al momento de brindar más beneficios para nuestros clientes.</strong></p>
             </div>
@@ -395,7 +395,7 @@
             <p>Dirección:</p>
             <ul>
                 <li><strong>Lavalle 353, Luján, Buenos Aires.</strong></li>
-                <li><strong>Hipólito Yrigoyen 897, Pehuajó, Buenos Aires.</strong></li>
+                <li><strong>Mitre 1060, Pehuajó, Buenos Aires.</strong></li>
             </ul>
             <p>Buscanos en nuestras redes sociales.</p>
             <ul>
@@ -418,7 +418,7 @@
                     <p>Teléfono oficina Luján: (11) 15/5957-0115</p>
                 </div>
                 <div class="f-dir2">
-                    <p>Hipólito Yrigoyen 897, Pehuajó, Buenos Aires.</p>
+                    <p>Mitre 1060, Pehuajó, Buenos Aires.</p>
                     <p class="f-div">&nbsp;-&nbsp</p>
                     <p>Teléfono oficina Pehuajó: (02396) 15 604-111</p>
                 </div>
